--- a/index.html
+++ b/index.html
@@ -16,20 +16,7 @@
   <div class="smball"></div>
   
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"> </script>
-
-  <script>
-    document.documentElement.style.cursor = 'none';
-
-    gsap.set(".smball", {xPercent: -50, yPercent: -50});
-
-    let xTo = gsap.quickTo(".smball", "x", {duration: 0.4, ease: "power3"}),
-    yTo = gsap.quickTo(".smball", "y", {duration: 0.4, ease: "power3"});
-
-    window.addEventListener("mousemove", e => {
-    xTo(e.clientX);
-    yTo(e.clientY);
-    });
-  </script>
+  <script src="script.js"> </script>
   
 </body>
 </html>
